syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.pan.grpc";
option java_outer_classname = "HelloProto";

//package com.pan.grpc_provider;


service HelloService {
  rpc SayHello(HelloRequest) returns (HelloResponse) {}
}
message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}